--- a/pub.html
+++ b/pub.html
@@ -25,7 +25,7 @@ Qi Cheng and J. Maurice Rojas and Daqing Wan,
         199501, doi: 10.1007/s11432-017-9700-7
 
         <p> Dianyan Xiao, Jincheng Zhuang, Qi Cheng,
-        <a href="http://www.cs.ou.edu/~qcheng/paper/kum.pdf">
+        <a href="paper/kum.pdf">
 Factor base discrete logarithms in Kummer
             extensions,</a>
 Finite Fields and Their Applications 53 (2018) 205–225.
@@ -141,7 +141,7 @@ Science, Volume 326, Issues 1-3, Pages 419-429.
 
 
 <p> Qi Cheng and Ming-Deh Huang, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/ecyc.pdf">
+<a href="paper/ecyc.pdf">
 On counting and generating 
 curves over small finite fields, </a>
 Journal of Complexity, Volume 20, Issues 2-3, p. 284--296, 2004.
