All pdfs use local file

--- a/pub.html
+++ b/pub.html
@@ -36,13 +36,13 @@ Finite Fields and Their Applications 53 (2018) 205–225.
 Volume 46, July 2017, Pages 235–246.
 
 <p>     Jingguo Bi, Qi Cheng, and J. Maurice Rojas,
-    <a href="http://www.cs.ou.edu/~qcheng/paper/J-spff.pdf">
+    <a href="paper/J-spff.pdf">
     Sublinear Root Detection and New Hardness Results
         for Sparse Polynomials over Finite Fields,</a>
     SIAM J. Comput. 45-4 (2016), pp. 1433-1447.
 
 <p> Jincheng Zhuang, Qi Cheng, and Jiyou Li,
-  <a href="http://www.cs.ou.edu/~qcheng/paper/it16deep.pdf">
+  <a href="paper/it16deep.pdf">
     On Determining Deep Holes of Generalized Reed-Solomon Codes</a>,
   IEEE Transactions On Information Theory, VOL. 62, NO. 1, January 2016. Pages 199-207.
 
@@ -53,21 +53,21 @@ Theoretical Computer Science, Volume 560,
 Part 2,  Pages 121--130,  2014.
 
 <p> Qi Cheng, Daqing Wan and Jincheng Zhuang, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/trapDL.pdf">
+<a href="paper/trapDL.pdf">
 Traps to the BGJT-Algorithm for Discrete Logarithms,
 </a>
 LMS Journal of Computation and Mathematics, 17:218--229
 (Special issue for ANTS 2014).
 
 <p> Qi Cheng and Jincheng Zhuang, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/pisot.pdf">
+<a href="paper/pisot.pdf">
 On certain computations of pisot numbers. 
 </a>
 Information Processing Letters, 113:271–275, 2013.
 
 
 <p> Qi Cheng and Daqing Wan, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/gd.pdf">
+<a href="paper/gd.pdf">
 A Deterministic Reduction for the Gap Minimum Distance Problem</a>, 
 IEEE Transactions on Information Theory. 
 <a href="http://dx.doi.org/10.1109/TIT.2012.2209198"> Vol. 58 No. 11.
@@ -75,49 +75,49 @@ Pages:	6935 - 6941  </a>
 
 
 
-<p> Qi Cheng and Yu-Hsin Li, <a href="http://www.cs.ou.edu/~qcheng/paper/ssrjournal.pdf"> On the minimum gap between sums of square roots of small integers,
+<p> Qi Cheng and Yu-Hsin Li, <a href="paper/ssrjournal.pdf"> On the minimum gap between sums of square roots of small integers,
 </a> Theoretical Computer Science 412 (2011): 5458--5465.
 
 
 <p> Qi Cheng and Daqing Wan, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/chengwan.pdf">
+<a href="paper/chengwan.pdf">
 Complexity of Decoding Positive-Rate Primitive Reed-Solomon Codes</a>, 
 IEEE Transactions on Information Theory. 
 Vol. 56, No. 10. Pages: 5217 -- 5222.
 
 
 <p>Qi Cheng,  Xianmeng Meng,  Celi Sun and
-Jiazhe Chen, <a href="http://www.cs.ou.edu/~qcheng/paper/lllssr.pdf">
+Jiazhe Chen, <a href="paper/lllssr.pdf">
 Bounding the Sum of Square Roots via Lattice Reduction, </a>
 Mathematics of Computation, 79  (2010), 1109-1122. 
 
 
 <p>Qi Cheng, Sergey P. Tarasov and Mikhail N. Vyalyi,
-<a href="http://www.cs.ou.edu/~qcheng/paper/spj.pdf">
+<a href="paper/spj.pdf">
 Efficient Algorithms for Sparse Cyclotomic Integer Zero Testing 
 </a>, Theory of Computing Systems. 46(1): 120--142.
 
-<p> Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/md.pdf">
+<p> Qi Cheng, <a href="paper/md.pdf">
 Hard problems of Algebraic Geometry codes
 </a>,  IEEE Transactions on Information Theory. 54(1): 402--406.
 
-<p> Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/higho.pdf">
+<p> Qi Cheng, <a href="paper/higho.pdf">
 Constructing finite field extensions with large order elements
 </a>,  SIAM journal on Discrete Mathematics, 21(3): 726--730.
  
 <p> Qi Cheng and Daqing Wan, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/ld.pdf">
+<a href="paper/ld.pdf">
 On the List and Bounded Distance Decodability 
 of the Reed-Solomon Codes, 
 </a>  SIAM journal on Computing, 37(1):  195--209. Special issue on 
 FOCS 2004.
 
-<p> Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/aksimp.pdf">
+<p> Qi Cheng, <a href="paper/aksimp.pdf">
 Primality Proving via One Round in ECPP and One Iteration in AKS
 </a>, Journal of Cryptology, 20(3): 375-387.
 
 <p> Qi Cheng and Ming-Deh Huang, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/lift.pdf">
+<a href="paper/lift.pdf">
 On Partial Lifting and the Elliptic
 Curve Discrete Logarithm Problem </a>, Algorithmica, 46(1), Page 59--68.
 
@@ -127,7 +127,7 @@ and RT Schweller, Complexities for generalized models of self-assembly,
 SIAM journal on Computing, 34(6), Pages 1493--1515.
 
 
-<p> Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/lw.pdf">On 
+<p> Qi Cheng, <a href="paper/lw.pdf">On 
 the Bounded Sum-of-digits Discrete Logarithm Problem
 in Finite Fields </a>, SIAM Journal on Computing, Vol 34, Number 6,
 Pages 1432--1442, 2005.
@@ -135,7 +135,7 @@ Pages 1432--1442, 2005.
 <p> Qi Cheng, On the construction of finite field elements of large order,
 Finite Fields and Their Applications. Vol 11, Issue 3, Pages 358-366, 2005.
 
-<p> Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/factorial.pdf">
+<p> Qi Cheng, <a href="paper/factorial.pdf">
 On the Ultimate Complexity of Factorials</a>, Theoretical  Computer
 Science, Volume 326, Issues 1-3, Pages 419-429.
 
@@ -146,19 +146,19 @@ On counting and generating
 curves over small finite fields, </a>
 Journal of Complexity, Volume 20, Issues 2-3, p. 284--296, 2004.
 
-<p> Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/BSS.pdf">
+<p> Qi Cheng, <a href="paper/BSS.pdf">
 Straight Line Programs and Torsion Points on Elliptic
 Curves </a>, Computational Complexity, 12:3-4, 150--161.
 
 
 <p>Qi Cheng and Fang Fang, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/stablec.ps">
+<a href="paper/stablec.ps">
 Kolmogorov Random Graphs Only Have 
 Trivial Stable Colorings</a>,  Information
 Processing Letters 81, 2002,  133--136.
 
 <p>Q. Cheng, M. Chrobak and G. Sundaram, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/compg.pdf">
+<a href="paper/compg.pdf">
 Computing 
 Simple Paths among Obstacles</a>,  Computational Geometry: 
 Theory and Applications, 16(2000), 223-233. 
@@ -166,18 +166,18 @@ Theory and Applications, 16(2000), 223-233.
 <hr>
 <h3>Conference Publications</h3>
 <p> Yanbin Pan,Jun Xu,Nick Wadleigh,Qi Cheng,
-    <a href="http://www.cs.ou.edu/~qcheng/paper/ilsvp.pdf">
+    <a href="paper/ilsvp.pdf">
         On the ideal shortest vector problem over random rational primes,
     </a> 40th Annual International Conference on the Theory and Applications of Cryptographic Techniques
     (Eurocrypto 2021).
 
     <p> Qi Cheng, Shuhong Gao, J. Maurice Rojas, and Daqing Wan,
-    <a href="http://www.cs.ou.edu/~qcheng/paper/zpt.pdf">
+    <a href="paper/zpt.pdf">
         Counting roots for polynomials modulo prime powers,</a> Proceedings of
     Thirteenth Algorithmic Number Theory Symposium ANTS-XIII, Open Book Series,
     Mathematical Sciences Publishers, 2018.
 
-<p> Jincheng Zhuang and Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/cosets.pdf">
+<p> Jincheng Zhuang and Qi Cheng, <a href="paper/cosets.pdf">
     Generating Coset Representatives of $PGL_2(\F_q)$ in $PGL_2(\F_{q^2})$</a>,
   Proceedings of the 11th International Conference on Information Security and Cryptology (Inscrypt 2015), LNCS 9589, Pages: 167--177, 2016.
   
@@ -189,14 +189,14 @@ Theory and Applications, 16(2000), 223-233.
   University of Trento, Italy.
 
 <p> Qi Cheng, Jincheng Zhuang, and Jiyou Li,
-<a href="http://www.cs.ou.edu/~qcheng/paper/Comp_deep_hole.pdf">
+<a href="paper/Comp_deep_hole.pdf">
 On determining deep holes of Generalized Reed-
 Solomon codes, </a> In Proceedings of The 24th 
 International Symposium on Algorithms and
 Computation (ISAAC), Hong Kong, China, 2013.
 
 <p> Jingguo Bi,  Qi Cheng and J. Maurice Rojas, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/spff.pdf">
+<a href="paper/spff.pdf">
 Sub-Linear Root Detection, and New Hardness Results, 
 for Sparse Polynomials Over Finite Fields,</a>
 Proceedings of  
@@ -213,21 +213,21 @@ Tenth Algorithmic Number Theory Symposium (ANTS-X),
 San Diego, CA.
 
 <p> Jingguo Bi and Qi Cheng, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/lsvp.pdf">
+<a href="paper/lsvp.pdf">
 Lower Bounds of Shortest Vector Lengths in Random NTRU Lattices</a>,
 The 9th annual conference on Theory and Applications of Models of Computation
 (TAMC 2012). LNCS 7287. Pages: 143--155.
  
 
 <p> Qi Cheng, Shuhong Gao and Daqing Wan, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/fho.pdf">
+<a href="paper/fho.pdf">
 Constructing high order elements through subspace polynomials
 </a>, Proceedings of the Twenty-Third Annual ACM-SIAM Symposium on Discrete Algorithms 
 (SODA 2012),
 Pages: 1457-1463.
 
 
-<p> Qi Cheng and Yu-Hsin Li, <a href="http://www.cs.ou.edu/~qcheng/paper/essr.pdf"> Finding the smallest gap between sums of square roots.
+<p> Qi Cheng and Yu-Hsin Li, <a href="paper/essr.pdf"> Finding the smallest gap between sums of square roots.
 </a> Proceedings of The 9th Latin American Theoretical Informatics Symposium 
 (LATIN 2010), LNCS 6034, Pages: 446--455.
 
@@ -242,20 +242,20 @@ Complexity of Decoding Positive-Rate Reed-Solomon Codes,
 Proceedings of the 35th International 
                 Colloquium on Automata, Languages and Programming
 (ICALP), LNCS 5125,   2008.
-<a href="http://www.cs.ou.edu/~qcheng/paper/chengwan.pdf">Updated version</a>
+<a href="paper/chengwan.pdf">Updated version</a>
 
 
-<p> Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/sp.pdf">
+<p> Qi Cheng, <a href="paper/sp.pdf">
 Derandomization of Sparse Cyclotomic Integer Zero Testing</a>,
 FOCS 2007, Pages 74--80. Journal version appeared in Theory of Computing 
 Systems.
 
 <p> Qi Cheng and Elizabeth Murray, 
-<a href="http://www.cs.ou.edu/~qcheng/paper/deep.pdf">
+<a href="paper/deep.pdf">
 On Deciding Deep Holes of Reed-Solomon Codes</a>, 
 Proceedings of TAMC 2007, LNCS 4484, Page 296--305.
 
-<p> Qi Cheng,  <a href="http://www.cs.ou.edu/~qcheng/paper/ssr.pdf">
+<p> Qi Cheng,  <a href="paper/ssr.pdf">
 On comparing sums of square roots of small integers</a>,
 Proceedings of MFCS 2006, LNCS 4162, Page 250--255.
 
@@ -320,7 +320,7 @@ Curves".
 
 <p>Len Adleman, Qi Cheng, Ashish Goel, Ming-Deh Huang, David Kempe,
 Pablo Moisset de Espanes and Paul Rothemund, <a
-href="http://www.cs.ou.edu/~qcheng/paper/optimization.pdf">
+href="paper/optimization.pdf">
 Combinatorial optimization problems in self-assembly</a>, 34th Annual
 ACM Symposium on the Theory of Computing(STOC), 2002.
 
@@ -328,12 +328,12 @@ ACM Symposium on the Theory of Computing(STOC), 2002.
 <p>Qi Cheng and Shigenori Uchiyama, Nonuniform polynomial time 
 algorithm to solve decisional Diffie-Hellman problem in finite 
 fields under conjecture, RSA conference cryptographers' track, 2002,
-LNCS 2271, Springer. <a href="http://www.cs.ou.edu/~qcheng/paper/ddh.pdf">
+LNCS 2271, Springer. <a href="paper/ddh.pdf">
 Updated version</a>
 
 
 <p>Leonard Adleman, Qi Cheng, Ashish Goel and Ming-Deh Huang,
-<a href="http://www.cs.ou.edu/~qcheng/paper/square.pdf">
+<a href="paper/square.pdf">
 Running Time and Program Size for Self-assembled Squares</a>,
 33th Annual ACM Symposium on the Theory of
 Computing(STOC), 2001.
@@ -344,7 +344,7 @@ Computing(STOC), 2001.
 over Finite Fields and Stable Colorings of Tournaments, 
 Algorithmic Number Theory Symposium(ANTS) IV, Lecture Notes
 in Computer Science 1838, 2000. 
-<a href="http://www.cs.ou.edu/~qcheng/paper/fpjsc.pdf"> Updated
+<a href="paper/fpjsc.pdf"> Updated
 version</a>
 
 
@@ -361,7 +361,7 @@ in Computer Science 959.
 <a href="http://arxiv.org/find/cs/1/au:+Cheng_Q/0/1/0/all/0/1"> here. </a>
 
 
-<p> Qi Cheng, <a href="http://www.cs.ou.edu/~qcheng/paper/speint.pdf">
+<p> Qi Cheng, <a href="paper/speint.pdf">
 A New Special-Purpose Factorization Algorithm</a>, 2002.
 
 
