--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </HEAD>
 <BODY background=bg.gif>
 
-<p> Qi Cheng ( <img src=name.gif> )
+<p> Qi Cheng
+<!-- ( <img src=name.gif> ) -->
 <br>Williams Companies Foundation Presidential  Professor
 <br>Professor of <a href="http://www.cs.ou.edu">Computer Science</a>
 <br> <a href="http://www.ou.edu">University of Oklahoma</a>.
