Add FFA many roots paper

--- a/pub.html
+++ b/pub.html
@@ -9,15 +9,15 @@
 
 
     <h3>Journal Publications</h3> 
- <p>    Jincheng Zhuang, Qi Cheng, and Jiejing Wen, Solution Counts and Sums of Roots of
-Unity,  Journal of Number Theory 240 (Nov. 2022), pp. 551–561.
+ <p>    Jincheng Zhuang, Qi Cheng, and Jiejing Wen, <a href="paper/sum_roots.pdf">Solution Counts and Sums of Roots of
+Unity</a>,  Journal of Number Theory 240 (Nov. 2022), pp. 551–561.
 
    <p>
 Qi Cheng and J. Maurice Rojas and Daqing Wan,
-  Computing zeta functions of large polynomial systems over finite fields,
+  <a href="paper/computzeta.pdf">Computing zeta functions of large polynomial systems over finite fields</a>,
   J. Complexity, volume  73, 2022.
 
-    <p> Cheng, Q., Zhang, J. & Zhuang, J. LWE from non-commutative group rings. Des. Codes Cryptogr. 90, 239–263 (2022). https://doi.org/10.1007/s10623-021-00973-6
+    <p> Cheng, Q., Zhang, J. & Zhuang, J. <a href="paper/non-commutative.pdf">LWE from non-commutative group rings</a>. Des. Codes Cryptogr. 90, 239–263 (2022). https://doi.org/10.1007/s10623-021-00973-6
 
     <p> Xiao D Y, Cheng Q. A faster method to compute primitive
          elements and discrete logarithms of factor base in
@@ -31,7 +31,7 @@ Factor base discrete logarithms in Kummer
 Finite Fields and Their Applications 53 (2018) 205–225.
 
 <p> Qi Cheng, Shuhong Gao, J. Maurice Rojas, Daqing Wan,
-    Sparse univariate polynomials with many roots over finite fields,
+    <a href="https://www.sciencedirect.com/science/article/pii/S1071579717300278">Sparse univariate polynomials with many roots over finite fields</a>,
     Finite Fields and Their Applications,
 Volume 46, July 2017, Pages 235–246.
 
