--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ China, 1995.
 <p>BSc, <a href="http://www.nankai.edu.cn">Nankai University</a>, China, 
 1992.
 
-<p><a href="http://www.cs.ou.edu/~qcheng/vita.pdf">Curriculum Vitae</a>.
+<p><a href="vita.pdf">Curriculum Vitae</a>.
 
 
 <hr>
